--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 Authors:
-  Eliot Alter
-  Trevor Rothaus
-  Dylan Portelance
+
+Eliot Alter
+Trevor Rothaus
+Dylan Portelance
+
+Description:
 
 Our team will develop a composition and performance tool that allows users to
 create and edit a loops or sequences of notes by manipulating boxes on a large
