changed playbutton to play/pause and pause to stop, still need to change function names. Fixed pause to pause right away.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
+FF and Rew faster
+Play twice error
+Pause doesn't pause right away
 Make loops work
 Move play pause rewind functions to new file
-FF and Rew faster
 Save / Load
 Finish documentation
 Don't have to double click to color a new cell
