added remove path.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 FF and Rew faster
+Chords
+Clear Path
+half, quarter note
 Make loops work
-Move play pause rewind functions to new file
 Save / Load
 Finish documentation
 Don't have to double click to color a new cell
