Added the UI to display multiple notes

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 FF and Rew faster
-Chords
+Display Chords on the ui
 Clear Path
 half, quarter note
 Make loops work
 Save / Load
 Finish documentation
-Don't have to double click to color a new cell
