updated todo list. Started changing path button UI

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
-FF and Rew faster
+half, quarter notes
+FF and Rew faster (slider tempo)
 Pulse on beat
-half, quarter note
+Multiple paths when reversing back on itself
+Editing the path
 Make loops work
 Save / Load
 Finish documentation
+Portrait to Landscape
