Added more ideas/todo. Credit again goes to Seth (oh what a productive train ride this is...)

--- a/TODO
+++ b/TODO
@@ -10,6 +10,8 @@ Add path scrollable
 Add button to hide/show path
 half, quarter notes
 
+Make the song stop if you start editing a note
+
 Late todos:
 Make the grid scrollable
 
