Added an accessTime property to the paths (which I'll later use to implement nthPathName)

--- a/TODO
+++ b/TODO
@@ -11,6 +11,12 @@ half, quarter notes
 
 Make the song stop if you start editing a note
 
+Bugs involving multiple paths:
+Clearing a path
+Selecting the nth path
+Naming paths
+Syncing paths when clicking in the middle of one
+
 Late todos:
 Make the grid scrollable
 
