--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Eliot Alter
 Trevor Rothaus
 Dylan Portelance
 
-GroovyPaths is the first of its kind. Load it up and fill the squares on the grid with notes and chords using the colorful keyboard. Draw paths over these squares to create melodies and musical lines with ease.
+ColorJamz is the first of its kind. Load it up and fill the squares on the grid with notes and chords using the colorful keyboard. Draw paths over these squares to create melodies and musical lines with ease.
 
 Features:
 
@@ -13,6 +13,6 @@ Features:
 * Easy to use path editor with add, remove, loop, clear and rename
 * Save and load projects
 * Playback mode with dynamic tempo change
-* Tap points on the path during playback to begin playig the path from that point (improvise with ease!)
+* Tap points on the path during playback to begin playing the path from that point (improvise with ease!)
 
-Find out more about GroovyPaths on the webpage and send your feedback. Enjoy!
+Find out more about ColorJamz on the webpage and send your feedback. Enjoy!
